# discovery-forge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  REUSE.toml  evaluate.py  main.py  pyproject.toml  skills-lock.json
.github/workflows/: daily-research.yml  weekly-briefing.yml
.reuse/templates/: default_template.jinja2
eval/: OFFLINE_EVALUATION.en.md  OFFLINE_EVALUATION.ja.md  OFFLINE_EVALUATION.ko.md  eval_dataset.py  researcher_discovery_precision.jsonl  researcher_verdict_dataset.jsonl
notes/: 00_synthesis.md  AGENTS.md  Q1_definition_scope.md  Q2_systems_frameworks.md  Q3_benchmarks_limits.md  Q4_failure_modes.md  Q5_commercial_vs_opensource.md  RESEARCH_PLAN.json  sources.jsonl
scripts/: migrate_to_registry.py
skills/annotation-improvement/: SKILL.md
skills/autoresearch-feedback-improvement/: SKILL.md  offline-evaluation-improvement.md  offline-profiler-evaluation-improvement.md  online-annotation-improvement.md
skills/build-verdict-dataset/: SKILL.md  example.md
skills/discovery-forge-feedback-improvement/: SKILL.md  offline-evaluation-improvement.md  online-annotation-improvement.md
skills/discovery-forge-weave-improvement/: SKILL.md  example.md
skills/offline-eval-improvement/: SKILL.md  example.md
src/autoresearch_researcher/: cli.py  orchestrator.py
src/discovery_forge/: __init__.py  cli.py  observability.py  orchestrator.py  research_run.py  review.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/unit/: test_data_upload.py  test_discovery_evaluation.py  test_eval_datasets.py  test_feed_export.py  test_feedback_improvement.py  test_perplexity_search.py  test_profiler_evaluation.py  test_prompt_versions.py  test_registry.py  test_registry_integration.py  test_researcher.py  test_researcher_evaluation.py  test_researcher_model.py  test_tool_trace_redesign.py  test_turso_feed.py  test_us1_bootstrap.py  test_us2_cli.py  test_us2_entrypoints.py  test_us3_discovery.py  test_us4_profiler.py  (+6 more)
(+72 files in other folders)
